<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60pt"
            android:layout_marginTop="90pt"
            android:text="@string/prediagnosis_guomin_or_not_tips"
            android:textColor="#333"
            android:textSize="72pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60pt"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0pt">

            <TextView
                android:id="@+id/qingmeisu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_guomin_penicillin_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/toubao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_guomin_cephalosporin_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/huanganlei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="208pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_guomin_sulfonamidetips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/qita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_guomin_other_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/wu11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_guomin_no_tips"
                android:textColor="#666"
                android:textSize="72pt" />
        </LinearLayout>

        <TextView
            android:id="@+id/wu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60pt"
            android:layout_marginTop="40pt"
            android:clickable="true"
            android:drawableLeft="@drawable/bg_huaiyun_set"
            android:drawablePadding="24pt"
            android:gravity="center"
            android:text="@string/prediagnosis_guomin_no_tips"
            android:textColor="#666"
            android:textSize="72pt"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_1" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60pt"
            android:layout_marginTop="68pt"
            android:text="@string/prediagnosis_disease_or_not_tips"
            android:textColor="#333"
            android:textSize="72pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wu1" />

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60pt"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title2">

            <TextView
                android:id="@+id/gaouxeya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_disease_hypertension_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/tangniaobing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_disease_diabetes_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/shexian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_disease_heart_disease_tips"
                android:textColor="#666"
                android:textSize="72pt" />

            <TextView
                android:id="@+id/xiaochuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136pt"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_huaiyun_not"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/prediagnosis_disease_asthma_tips"
                android:textColor="#666"
                android:textSize="72pt" />
        </LinearLayout>


        <TextView
            android:id="@+id/qita2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60pt"
            android:layout_marginTop="40pt"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_huaiyun_not"
            android:drawablePadding="24pt"
            android:gravity="center"
            android:text="@string/prediagnosis_guomin_other_tips"
            android:textColor="#666"
            android:textSize="72pt"
            app:layout_constraintStart_toStartOf="@+id/ll_2"
            app:layout_constraintTop_toBottomOf="@+id/ll_2" />

        <TextView
            android:id="@+id/wu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="208pt"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_huaiyun_not"
            android:drawablePadding="24pt"
            android:gravity="center"
            android:text="@string/prediagnosis_guomin_no_tips"
            android:textColor="#666"
            android:textSize="72pt"
            app:layout_constraintBottom_toBottomOf="@+id/qita2"
            app:layout_constraintStart_toEndOf="@+id/qita2"
            app:layout_constraintTop_toTopOf="@+id/qita2"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qita2">

            <TextView
                android:id="@+id/tv_sign_up_go_back"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="160pt"
                android:layout_marginLeft="35dp"
                android:background="@drawable/bg_selector_btn_go_back"
                android:gravity="center"
                android:text="@string/prediagnosis_next_tips"
                android:textColor="#3F85FC"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_sign_up_go_forward"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="160pt"
                android:layout_marginRight="35dp"
                android:background="@drawable/bg_selector_btn_go_forward"
                android:gravity="center"
                android:text="@string/prediagnosis_pre_tips"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>